Fixed backface visibility extends

--- a/styleguide/source/stylesheets/modules/_nav.sass
+++ b/styleguide/source/stylesheets/modules/_nav.sass
@@ -9,7 +9,7 @@
   height: auto
 
 .wrapper
-  @extend %backface-visibility
+  @extend %backface-visibility--hidden
   @extend %overlay-effect
   z-index: 500
   background-color: white
